# graphen

./: Adjazenzmatrix.cpp  Adjazenzmatrix.h  BipartiterGraph.cpp  BipartiterGraph.h  CMakeLists.txt  Converter.cpp  Converter.h  Graph.cpp  Graph.h  Inzidenzmatrix.cpp  Inzidenzmatrix.h  Kantentabelle.cpp  Kantentabelle.h  Komponentengraph.cpp  Komponentengraph.h  README.md  VerbundenerGraph.cpp  VerbundenerGraph.h  VerbunderGraph.cpp  VerbunderGraph.h  VollstaendigerGraph.cpp  VollstaendigerGraph.h  main.cpp
